

Changelog for 9.2.3

Collector:

DB:
  - fixed google api enforcement limit
  - fixed the memory error on offline USB creation
  - fixed a race condition on upgrade+rename of an agent
  - fixed default port used by rcs-db-config with --reset-pass
  - fixed moving grid files when moving agents
  - fixed access to target before it was loaded (move target)

Installer:
  - address cannot be "localhost" anymore
  - address cannot contain an uppercase letter anymore
  - errors while executing rcs-db-config with --add-shard are now raised
  - rcs-db-config with --add-shard is now executed only upon fresh shard installation