@@ -40,6 +40,7 @@ TODO: 9.4
       - automatic discovery (and thus suggestion) of groups (communities)
       - calculate "centrality" on entities
       - calculate "weight" on entities
+      - read: http://arxiv.org/pdf/1404.1295v1.pdf
 
 ======================================
 TODO FUTURE:
