@@ -16,16 +16,35 @@ module FilecapProcessing
   end
 
   def process
-    # use the info of the file to create an entry in the filesystem structure
     agent = get_agent
     target = agent.get_parent
 
-    # don't add duplicates
-    return unless ::Evidence.target(target[:_id]).where(
-        {:aid => agent[:_id].to_s,
-         :type => 'filesystem',
-         'data.path' => self[:data][:path]}).empty?
+    full_path = self[:data][:path]
+    separator = full_path.match(/([\\\/])/)[0]
+    elems = full_path.split(/[\\\/]/)
 
+    # use the info of the file to create an entry in the filesystem structure
+    create_filesystem_entry(agent, target, full_path, 0, self[:data][:size])
+
+    # and recreate the intermediate directory structure
+    until elems.size.eql? 1
+      elems.pop
+      path = elems.join(separator)
+      path = separator if path.length.eql? 0
+      create_filesystem_entry(agent, target, path, 1, 0)
+    end
+
+  end
+
+  def create_filesystem_entry(agent, target, path, type, size)
+
+    # don't add duplicates by removing the old entry
+    # we cant update the :da since it's a shard key
+    ::Evidence.target(target[:_id]).where({:aid => agent[:_id].to_s, :type => 'filesystem', 'data.path' => path, 'data.attr' => type}).each do |ev|
+      ev.destroy
+    end
+
+    # insert the entry
     ::Evidence.target(target[:_id]).create do |ev|
       ev.aid = agent[:_id].to_s
       ev.type = 'filesystem'
@@ -37,9 +56,9 @@ module FilecapProcessing
       ev.note = ""
 
       data = {}
-      data[:path] = self[:data][:path]
-      data[:attr] = 0 # is a file
-      data[:size] = self[:data][:size]
+      data[:path] = path
+      data[:attr] = type # is a file (0) or directory (1)
+      data[:size] = size
 
       ev.data = data
     end
