@@ -5,15 +5,17 @@ Changelog for 9.2.3
 Collector:
 
 DB:
+  - files opened/captured on removable drives now appears in the filesystem section
   - fixed google api enforcement limit
   - fixed the memory error on offline USB creation
   - fixed a race condition on upgrade+rename of an agent
+  - fixed password reset procedure (rcs-db-config --reset-pass)
   - fixed default port used by rcs-db-config with --reset-pass
   - fixed moving grid files when moving agents
   - fixed access to target before it was loaded (move target)
 
 Installer:
-  - address cannot be "localhost" anymore
-  - address cannot contain an uppercase letter anymore
+  - CN cannot be "localhost" anymore
+  - CN must be lowercase
   - errors while executing rcs-db-config with --add-shard are now raised
   - rcs-db-config with --add-shard is now executed only upon fresh shard installation
